--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <string name="app_name">GeoQuiz</string>
     <string name="hello_world">Hello world!</string>
+    <string name="true_button">True</string>
+    <string name="false_button">False</string>
     <string name="action_settings">Settings</string>
 
 </resources>
